gfx/vr/ipc/VRManagerChild.cpp
@@ -184,6 +184,17 @@ void VRManagerChild::UpdateDisplayInfo(
       }
     }
     if (!found) {
+      // In order to make the current VRDisplay can continue to apply for the
+      // newest VRDisplayInfo, we need to exit presentionation before
+      // disconnecting.
+      if (display->IsPresentationGenerationCurrent()) {
+        NotifyPresentationGenerationChangedInternal(
+            display->GetDisplayInfo().GetDisplayID());
+
+        RefPtr<VRManagerChild> vm = VRManagerChild::Get();
+        vm->FireDOMVRDisplayPresentChangeEvent(
+            display->GetDisplayInfo().GetDisplayID());
+      }
       display->NotifyDisconnected();
       disconnectedDisplays.AppendElement(
           display->GetDisplayInfo().GetDisplayID());
